[gd_scene load_steps=3 format=3 uid="uid://cnx0gtj4n7tn"]

[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_umrhx"]
[ext_resource type="Texture2D" uid="uid://dbyo1kjv8ltxt" path="res://assets/faceset.png" id="2_0gqa3"]

[node name="inventorySlot" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_umrhx")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_0gqa3")

[node name="MenuButton" type="MenuButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
popup/item_0/text = "Equip"
popup/item_1/text = "Drop"
popup/item_1/id = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MenuButton/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="OnClickButton" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="stacksLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.932
anchor_right = 1.0
anchor_bottom = 0.932
offset_left = -31.0
offset_top = -27.92
offset_right = -11.0
offset_bottom = -4.92

[node name="nameLabel" type="Label" parent="."]
layout_mode = 2

[node name="priceLabel" type="Label" parent="."]
visible = false
layout_mode = 2
